BaSP-W03-2022: links section tablet fixed, about desktop fixed

--- a/Semana-04/Styles/header.css
+++ b/Semana-04/Styles/header.css
@@ -17,7 +17,7 @@ header h1{
     font-weight: 700;
     font-size: 40px;
     line-height: 47px;
-    color: antiquewhite;
+    color: white;
 }
 
 header .burger-menu{
